# 0.00.14 (57181) Oct 3, 2011
10/3/11 Publishing to dev for interviews.
Made the ruler look like two separate rulers joined in the center.
Removed bricks from first tab and added more "interesting" objects.
# 0.00.13 (57110) Sep 30, 2011
9/30/11 Deploying to dev for interviews and feedback from design team.
Added a set of mystery masses that the user will not have seen by the time they get to the game.  We will need a bunch more of these.
Improved layout of control panel(s) on first two tabs.
Set up layers on the Intro tab so that the masses will always appear to be in front of the other model and control elements.
Got "Reset All" to return bricks to original position on the ground on the Intro tab.
Made it possible to place bricks on the ground anywhere on the Intro tab.
Changed names of the first two tabs to "Intro" and "Balance Lab".
Added a simple first tab where the user can only manipulate a limited set of masses.
Added multiple mass balance challenges.  For now, these are on level 4 only.
Made the mass deduction challenges back to being initially interactive, i.e. user must balance the plank.
Made the mass labels for the mystery masses into a question mark instead of just leaving them blank.
# 0.00.12 (56970) Sep 26, 2011
9/26/11 Deploying to dev for testing and interviews.
Made the mass deduction challenges start off in the balanced state rather than requiring the user to balance them.
Interspersed the "Deduce the Mass" challenges in with the balance challenges at all levels of the game.
Added more ratios for the "Deduce the Mass" challenges so that there are easier and harder versions of this challenge.
Fixed an issue where the fixed masses in the 2nd level challenges could end up on the right side.
Made the bold tick marks on the plank be every other one rather than every fourth one.
# 0.00.11 (56703) Sep 19, 2011
9/19/11 Publishing version with additional challenge style for review.