@@ -1,3 +1,4 @@
+Implemented a workaround for an issue where bricks would leave trails behind them when dragged on an enlarged play area.
 # 0.00.14 (57181) Oct 3, 2011
 10/3/11 Publishing to dev for interviews.
 Made the ruler look like two separate rulers joined in the center.
